read process changed